@@ -470,7 +470,6 @@ public class ContentfulUtils {
                 speakerId.getAndDecrement(),
                 extractPhoto(contentfulSpeaker.getFields().getPhoto(), assetMap, assetErrorSet, contentfulSpeaker.getFields().getNameEn()),
                 extractLocaleItems(contentfulSpeaker.getFields().getNameEn(), contentfulSpeaker.getFields().getName(), checkEnTextExistence),
-                extractLocaleItems(contentfulSpeaker.getFields().getCompanyEn(), contentfulSpeaker.getFields().getCompany(), checkEnTextExistence), //TODO: delete
                 List.of(new Company(
                         companyId.getAndDecrement(),
                         extractLocaleItems(contentfulSpeaker.getFields().getCompanyEn(), contentfulSpeaker.getFields().getCompany(), checkEnTextExistence)
@@ -1088,10 +1087,11 @@ public class ContentfulUtils {
                                 extractLocaleItems(
                                         "Stephen Chin",
                                         null),
-                                extractLocaleItems(
-                                        "JFrog",
-                                        null),
-                                Collections.emptyList(),
+                                List.of(new Company(
+                                        287,
+                                        extractLocaleItems(
+                                                "JFrog",
+                                                null))),
                                 extractLocaleItems(
                                         "Stephen Chin is Senior Director of Developer Relations at JFrog, author of Raspberry Pi with Java, The Definitive Guide to Modern Client Development, and Pro JavaFX Platform. He has keynoted numerous Java conferences around the world including Oracle Code One (formerly JavaOne), where he is an 8-time Rock Star Award recipient. Stephen is an avid motorcyclist who has done evangelism tours in Europe, Japan, and Brazil, interviewing hackers in their natural habitat and posting the videos on <a href=\"http://nighthacking.com/\" target=\"_blank\">http://nighthacking.com/</a>. When he is not traveling, he enjoys teaching kids how to do embedded and robot programming together with his teenage daughter.",
                                         null),
@@ -1116,10 +1116,11 @@ public class ContentfulUtils {
                                 extractLocaleItems(
                                         "Sergey Egorov",
                                         "Сергей Егоров"),
-                                extractLocaleItems(
-                                        "Pivotal",
-                                        null),
-                                Collections.emptyList(),
+                                List.of(new Company(
+                                        403,
+                                        extractLocaleItems(
+                                                "Pivotal",
+                                                null))),
                                 extractLocaleItems(
                                         "Sergei works at Pivotal on Project Reactor in Berlin, Germany.\n" +
                                                 "\n" +
@@ -1150,10 +1151,11 @@ public class ContentfulUtils {
                                 extractLocaleItems(
                                         "Arun Gupta",
                                         null),
-                                extractLocaleItems(
-                                        "Couchbase",
-                                        null),
-                                Collections.emptyList(),
+                                List.of(new Company(
+                                        114,
+                                        extractLocaleItems(
+                                                "Couchbase",
+                                                null))),
                                 extractLocaleItems(
                                         "Arun Gupta is the vice president of developer advocacy at Couchbase. He has been built and led developer communities for 10+ years at Sun, Oracle, and Red Hat. He has deep expertise in leading cross-functional teams to develop and execute strategy, planning, and execution of content, marketing campaigns, and programs. Prior to that he led engineering teams at Sun and is a founding member of the Java EE team. Gupta has authored more than 2,000 blog posts on technology. He has extensive speaking experience in more than 40 countries on myriad topics and is a JavaOne Rock Star for three years in a row. Gupta also founded the Devoxx4Kids chapter in the US and continues to promote technology education among children. An author of a best-selling book, an avid runner, a globe trotter, a Java Champion, a JUG leader, and a Docker Captain, he is easily accessible at @arungupta.",
                                         null),
@@ -1178,10 +1180,11 @@ public class ContentfulUtils {
                                 extractLocaleItems(
                                         "Roman Shaposhnik",
                                         "Роман Шапошник"),
-                                extractLocaleItems(
-                                        "ZEDEDA Inc.",
-                                        null),
-                                Collections.emptyList(),
+                                List.of(new Company(
+                                        606,
+                                        extractLocaleItems(
+                                                "ZEDEDA Inc.",
+                                                null))),
                                 extractLocaleItems(
                                         "Roman is an open source software expert, currently serving on the board of directors for both The Apache Software Foundation and LF Edge. He has personally contributed to a variety of open source projects ranging from the Linux Kernel to Hadoop and ffmpeg. He is a co-founder and the vice president of product and strategy for Zededa, an edge virtualization startup. Throughout his career, Roman has held technical leadership roles at several well-known companies, including Sun Microsystems, Yahoo!, Cloudera and Pivotal Software. He holds a master's degree in mathematics and computer science from St. Petersburg State University. He likes German craft lagers and is fighting IPA invasion one seidla at a time.",
                                         null),
@@ -1206,10 +1209,7 @@ public class ContentfulUtils {
                                 extractLocaleItems(
                                         "Irina Shestak",
                                         null),
-                                extractLocaleItems(
-                                        null,
-                                        null),
-                                Collections.emptyList(),
+                                new ArrayList<>(),
                                 extractLocaleItems(
                                         "tl;dr javascript, wombats and hot takes. Irina is a London via Vancouver software developer. She spends quite a bit of her time exploring the outdoors, gushing over trains, and reading some Beatniks.",
                                         null),
@@ -1234,10 +1234,7 @@ public class ContentfulUtils {
                                 extractLocaleItems(
                                         "Sergei Kriger",
                                         "Сергей Кригер"),
-                                extractLocaleItems(
-                                        null,
-                                        null),
-                                Collections.emptyList(),
+                                new ArrayList<>(),
                                 extractLocaleItems(
                                         "Sergei fell in love with web development back in high school. He got a degree in Information Technologies at the University of Helsinki and has been spending his professional career working for web design studios in Helsinki and Munich. Sergei's focus areas are JavaScript development, UX and accessibility.",
                                         "Заболел веб-разработкой еще в школе (Windows 95, IE6, табличная верстка). Окончил Хельсинкский университет по специальности Information Technology, в настоящее время работает в Мюнхене фронтенд-разработчиком."),
@@ -1259,10 +1256,9 @@ public class ContentfulUtils {
                         return new Speaker(
                                 id,
                                 "",
-                                Collections.emptyList(),
-                                Collections.emptyList(),
-                                Collections.emptyList(),
-                                Collections.emptyList(),
+                                new ArrayList<>(),
+                                new ArrayList<>(),
+                                new ArrayList<>(),
                                 new Speaker.SpeakerSocials(
                                         null,
                                         null
